<resources>
    <string name="app_name">Найди пару</string>


    <string name="activityMainTitle">Выберите размер поля</string>
    <string name="activityMainBTN1"><u>4x4</u></string>
    <string name="activityMainBTN2"><u>6x6</u></string>
    <string name="activityMainBTN3"><u>8x8</u></string>
    <string name="activityMainBTN4">Правила игры</string>

    <string name="btnBack">Главное меню</string>
    <string name="btnRestart">Заново</string>

    <string name="activityRulesTitle">Правила игры "Найди пару"</string>
    <string name="activityRulesText">Эта игра — классическая игра «Мэмори» или «Найди пару!» —
        направлена на эффективноеразвитие способности к запоминанию и концентрации внимания.
        Игра также поможет Вашемуребенку научиться общению и совместной игре со взрослыми и другими детьми.
        <br/><u>Рекомендуемый возраст — от 2 до 99 лет.</u><br/>
        На экране раскладываются карточки картинками вниз.
        Игрок переворачивает любые две карточки. Если они составляют пару, игрок забирает их
        себе и переворачивает другие две карточки. Если нет, игрок кладет их обратно на те же места
        картинкой вниз и делает следующую попытку. Игрок должен внимательно
        следить за ходом игры, чтобы запомнить картинки на карточках к следующему ходу.
        Игра заканчивается, когда все пары разобраны. </string>
</resources>