<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:background="@color/bacground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activityMainTitle"
                android:textSize="36sp"
                android:layout_margin="10dp"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/activityMainBTN1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activityMainBTN1"
                android:textSize="36sp"
                android:layout_margin="10dp"
                android:textColor="@color/purple_700"
                android:gravity="center"
            />
            <TextView
                android:id="@+id/activityMainBTN2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activityMainBTN2"
                android:textSize="36sp"
                android:layout_margin="10dp"
                android:textColor="@color/purple_700"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/activityMainBTN3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activityMainBTN3"
                android:textSize="36sp"
                android:layout_margin="10dp"
                android:textColor="@color/purple_700"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/activityMainBTN4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activityMainBTN4"
                android:textSize="36sp"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:gravity="center"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>