<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesActivity"
    android:background="@color/bacground">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/idback">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activityRulesTitle"
                android:textSize="30sp"
                android:layout_margin="10dp"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activityRulesText"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textColor="@color/purple_700"
                android:gravity="center"
                />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/idback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/btnBack"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/purple_700"
        android:background="@drawable/btn"
        />

</RelativeLayout>